--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ https://www.tooplate.com/view/2126-antique-cafe
     </div>
     <div id="about" class="parallax-window" data-parallax="scroll" data-image-src="img/antique-cafe-bg-03.jpg">
         <div class="container mx-auto tm-container py-24 sm:py-48">
-            <div class="tm-item-container sm:ml-auto sm:mr-12 mx-auto sm:px-0 px-4">
+            <div class="tm-item-container sm:ml-auto mx-auto sm:px-0 px-4">
                 <div class="bg-white bg-opacity-80 p-12 pb-14 rounded-xl mb-5">
                     <h2 class="mb-6 tm-text-green text-4xl font-medium">About our cafe</h2>
                     <p class="mb-6 text-base leading-8">
