change phone number and email

--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@ https://www.tooplate.com/view/2126-antique-cafe
                     <h2 class="text-3xl mb-6 tm-text-green">Contact Us</h2>
                     <p class="mb-6 text-lg leading-8">
                         Praesent tellus magna, consectetur sit amet volutpat eu, pulvinar vitae sem.
-                        Sed ultrices. bg white 80% alpha. btn #066    
+                        Sed ultrices. bg white 80% alpha.
                     </p>
                     <p class="mb-10 text-lg">
-                        <span class="block mb-2">Tel: <a href="tel:0100200340" class="hover:text-yellow-600 transition">010-020-0340</a></span>
-                        <span class="block">Email: <a href="mailto:info@company.com" class="hover:text-yellow-600 transition">info@company.com</a></span>                        
+                        <span class="block mb-2">Tel : <a href="tel:09355900618" class="hover:text-yellow-600 transition number-font">09355900618 | 09361701973</a></span>
+                        <span class="block">Email: <a href="mailto:info@company.com" class="hover:text-yellow-600 transition">GozarCoffee1401@gmail.com</a></span>                        
                     </p>
                     <div class="text-center">
                         <a href="https://www.google.com/maps" class="inline-block text-white text-2xl pl-10 pr-12 py-6 rounded-lg transition tm-bg-green">
